fix(bingo): better bingo alignment

--- a/src/components/Bingo/Bingo.module.css
+++ b/src/components/Bingo/Bingo.module.css
@@ -5,7 +5,7 @@
     var(--color-pink),
     var(--color-purple)
     );
-    border-radius: 20px;
+    border-radius: 0 0 20px 20px;
     box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.3);
     color: rgba(255, 255, 255, .7);
     display: inline-block;
@@ -21,55 +21,50 @@
 }
 
 .bingoInner {
-  --offset: 0;
-  --size: 0;
-  --spacing: 0;
+    --offset: 0;
+    --size: 0;
+    --spacing: 0;
 
-  background-image: radial-gradient(var(--color-pink), var(--color-purple));
-  border-bottom: 1px solid var(--color-pink);
-  border-radius: 12px;
-  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
-  height: 330px;
-  padding: 60px 30px;
-  position: relative;
-  width: 1000px;
-}
-
-.top,
-.bottom {
-  box-sizing: border-box;
-  display: flex;
-  left: var(--offset);
-  justify-content: space-around;
-  padding: 0 var(--spacing);
-  position: absolute;
-  right: var(--offset);
-}
-
-.top {
-  top: var(--offset);
+    background-image: radial-gradient(var(--color-pink), var(--color-purple));
+    border-bottom: 1px solid var(--color-pink);
+    border-radius: 0 0 20px 20px;
+    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+    height: 330px;
+    padding: 60px 30px;
+    position: relative;
+    width: 1000px;
 }
 
 .bottom {
-  bottom: var(--offset);
+    box-sizing: border-box;
+    display: flex;
+    left: var(--offset);
+    justify-content: space-around;
+    padding: 0 var(--spacing);
+    position: absolute;
+    right: var(--offset);
+}
+
+.bottom {
+    bottom: var(--offset);
 }
 
 .left,
 .right {
-  bottom: var(--offset);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  position: absolute;
-  top: var(--offset);
+    bottom: var(--offset);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: absolute;
+    top: var(--offset);
 }
 
 .left {
-  left: var(--offset);
+    left: var(--offset);
 }
 
 .right {
-  right: var(--offset);
+    right: var(--offset);
 }
 
 .letter {
@@ -78,29 +73,30 @@
 }
 
 .bulb {
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-iteration-count: infinite;
-  background-image: linear-gradient(to left, #ffffce, #eee472);
-  border-radius: 50%;
-  height: var(--size);
-  width: var(--size);
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    background-image: linear-gradient(to left, #ffffce, #eee472);
+    box-shadow: 0 0 5px #eee472;
+    border-radius: 50%;
+    height: var(--size);
+    width: var(--size);
 }
 
 .bulb:nth-child(5n + 2) {
-  animation-delay: 0.1s;
+    animation-delay: 0.1s;
 }
 
 .bulb:nth-child(5n + 3) {
-  animation-delay: 0.2s;
+    animation-delay: 0.2s;
 }
 
 .bulb:nth-child(5n + 4) {
-  animation-delay: 0.3s;
+    animation-delay: 0.3s;
 }
 
 .bulb:nth-child(5n + 5) {
-  animation-delay: 0.4s;
+    animation-delay: 0.4s;
 }
 
 @keyframes fadeIn {
@@ -116,15 +112,13 @@
 }
 
 @keyframes blink {
-  from {
-    box-shadow: 0 0 0 white;
-    opacity: 0.5;
-  }
+    from {
+        opacity: 0.5;
+    }
 
-  to {
-    box-shadow: 0 0 5px #eee472;
-    opacity: 1;
-  }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes slide {
@@ -133,6 +127,6 @@
     }
 
     to {
-        top: -35px;
+        top: -25px;
     }
 }
